--- a/.github/workflows/shellcheck_action.yaml
+++ b/.github/workflows/shellcheck_action.yaml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run ShellCheck
-        uses: ludeeus/action-shellcheck@main
+        uses: ludeeus/action-shellcheck@master
       
